<resources>
    <string name="app_name">My Driver Tracking</string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="with_google">Acceder con Google</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="register">Regístrate</string>
    <string name="welcome">Bienvenido</string>
</resources>